fix spacing for blog logomark, broke on mobile

--- a/resources/assets/css/components/blog.less
+++ b/resources/assets/css/components/blog.less
@@ -157,8 +157,8 @@
   .blog-head-logo {
     font-size: 2em;
     text-align: center;
-    margin: 1.5em 5em;
-    padding: 1em 0;
+    margin: 1.5em auto;
+    padding: 1em 2em;
     .logomark-fill {
       fill: @gray_light;
       transition: @speed_slow @bezier_fadein;
